--- a/src/resources/config.yml
+++ b/src/resources/config.yml
@@ -1,5 +1,6 @@
-## The api URL of your pocketbase collection, in case you want to track job listings and build listeners for social media integration.
-pocketbase-url: "http://127.0.0.1:8090/api/collections/collectionIdOrName/records"
+## The api URL of your pocketbase collections
+pocketbase-connections-url: "http://127.0.0.1:8090/api/collections/collectionIdOrName/records"
+pocketbase-bans-url: "http://127.0.0.1:8090/api/collections/collectionIdOrName/records"
 ## The authorization for your pocketbase collection.
 pocketbase-auth-url: "http://127.0.0.1:8090/api/admins/auth-with-password"
 pocketbase-email: ""
